# test-mcp-server

./: pyproject.toml  requirements.txt
src/test_mcp_server/: __init__.py  server.py
