[project]
name = "test-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tarandeep03", email = "tarandeep.khurana03@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.2.0",
]

[project.scripts]
test-mcp-server = "test_mcp_server.server:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
